-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
4820
sanityn 40b is checking pdirops, but it seems once OBD_FAIL_MDS_PDO_LOCK is set, it will only wait 10 seconds to timeout, if the test cannot finish in 10 seconds, it will fail.
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/e73821d4-16be-11e1-9d03-52540025f9af.
The sub-test test_40b failed with the following error:
unlink is blocked
- Trackbacks
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....